<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">易基建</string>
    <string name="official_name">双端数字科技有限公司版权所有</string>
    <string name="official_email">邮箱：kefu@zicai365.com</string>
    <string name="official_phone">客服电话：4009-987-789</string>
    <string name="home">首页</string>
    <string name="people">关系</string>
    <string name="circle">消息</string>
    <string name="mine">我的</string>
    <string name="net_error">没有网络，点击重试</string>
    <string name="net_not">请检查是否联网</string>
    <string name="net_wrong">网络不稳定，游戏掉线了</string>
    <string name="reconnect_ing">正在重连，请稍等</string>
    <string name="loading">正在加载~</string>
    <string name="try_wait">网络不稳定，请稍后再试</string>
    <string name="request_error">请求出错，点击重试</string>
    <string name="empty_data">抱歉，数据暂时为空！</string>
    <string name="empty_view_locus">你还没有已查看的动态信息</string>
    <string name="empty_locus">目前还没有已发布动态信息</string>
    <string name="empty_consume">目前还没有已消费信息</string>
    <string name="empty_contact">目前还没有联系人信息</string>
    <string name="no_balance">余额不足</string>
    <string name="first_app">跳过</string>
    <string name="positive">确定</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="account_error">账号错误</string>
    <string name="mobile_error">请输入手机号</string>
    <string name="pwd_error">密码错误</string>
    <string name="pwd_empty">请输入密码</string>
    <string name="sms_error">请输入验证码</string>
    <string name="hint_mobile_code">请输入手机号</string>
    <string name="hint_SMS_verification_code">请输入短信验证码</string>
    <string name="hint_email_verification_code">请输入邮箱验证码</string>
    <string name="send_verification_code">发送验证码</string>
    <string name="send_verification_code_success">验证码已发送</string>
    <string name="hint_pwd">请输入密码</string>
    <string name="hint_input">请输入</string>
    <string name="hint_mobile_invite">请输入邀请手机号</string>
    <string name="login_account">账号登录</string>
    <string name="login_verification_code">验证码登录</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="account_null">账户名不存在!</string>
    <string name="send_again">重新获取</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="phone">手机</string>
    <string name="idCard">身份证</string>
    <string name="email">邮箱</string>
    <string name="company">公司</string>
    <string name="office">职位</string>
    <string name="project_area">项目地址</string>
    <string name="business_area">业务地区</string>
    <string name="people_area">联系人地址</string>
    <string name="receiving_area">收货地区</string>
    <string name="business_exp">业务经验</string>
    <string name="product">经营产品</string>
    <string name="please_hint">请输入</string>
    <string name="please_select">请选择</string>
    <string name="base_info">基本信息</string>
    <string name="save">保存</string>
    <string name="next">下一步</string>
    <string name="my_income">我的收益</string>
    <string name="my_income_explain">收益说明</string>
    <string name="my_project">我的工程</string>
    <string name="my_demand">我的需求</string>
    <string name="my_demand_zgx">我的需求 — 找资源</string>
    <string name="my_demand_zwz">我的需求 — 找物资</string>
    <string name="my_demand_zmj">我的需求 — 找买家</string>
    <string name="my_demand_zjd">我的需求 — 找基地</string>
    <string name="my_demand_zwl">我的需求 — 找物流</string>
    <string name="my_demand_zfa">我的需求 — 找方案</string>
    <string name="mine_subscription">信息认购</string>
    <string name="my_material">预定订单</string>
    <string name="my_design">设计订单</string>
    <string name="transaction_record">交易记录</string>
    <string name="pwd_pay">支付密码</string>
    <string name="read_history">查看记录</string>
    <string name="feedback">意见反馈</string>
    <string name="invite_friends">邀请好友</string>
    <string name="share_pictorial">分享图片</string>
    <string name="my_collection">我的收藏</string>
    <string name="set">设置</string>
    <string name="helper">帮助</string>
    <string name="take_photo">拍照</string>
    <string name="select_from_photo">从相册选择</string>
    <string name="cancel">取消</string>
    <string name="negative">取消</string>
    <string name="arrival_bank_card">到账银行卡</string>
    <string name="please_bind_bank_card">未绑定银行卡，请绑定</string>
    <string name="arrival_two_hours">2小时到账</string>
    <string name="withdrawal_amount">提现金额</string>
    <string name="withdraw">提  现</string>
    <string name="bind_bank_card">绑定银行卡</string>
    <string name="unbind_bank_card">解绑银行卡</string>
    <string name="unbind">解绑</string>
    <string name="please_select_sex">请选择性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="select_not">未选择</string>
    <string name="hint_real_name">请填写真实姓名</string>
    <string name="hint_name">请填写姓名</string>
    <string name="please_hint_real_name">为了方便别人找您合作，请填写真实姓名</string>
    <string name="mobile_verification">手机验证</string>
    <string name="hint_new_mobile">请输入新的手机号</string>
    <string name="hint_new_email">请输入新的邮箱账号</string>
    <string name="update_mobile">修改手机号</string>
    <string name="email_verification">邮箱验证</string>
    <string name="update_email">修改邮箱</string>
    <string name="submit">提交</string>
    <string name="submit_success">提交成功</string>
    <string name="modify">修改</string>
    <string name="id_card_positive">身份证正面</string>
    <string name="id_card_negative">身份证反面</string>
    <string name="business_card_positive">名片正面</string>
    <string name="business_card_negative">名片反面</string>
    <string name="authentication">身份认证</string>
    <string name="hint_keyword">请输入关键字</string>
    <string name="company_name">公司名称</string>
    <string name="company_website">公司网址</string>
    <string name="hind_company_website">请输入公司网址</string>
    <string name="scale_select">人员规模</string>
    <string name="unit_select">单位</string>
    <string name="upload_business_card">上传名片</string>
    <string name="bank_card_message">银行卡信息</string>
    <string name="account_name">账户名</string>
    <string name="bank_account">开户银行</string>
    <string name="bank_card_number">银行卡号</string>
    <string name="identity_number">身份证号</string>
    <string name="please_be_accurate_to_the_branch">请准确到支行</string>
    <string name="hint_bank_card_number">请填写银行卡号</string>
    <string name="hint_identity_number">请填写18位身份证号</string>
    <string name="third_login">微信登录账号绑定</string>
    <string name="receiving_address">收货地址管理</string>
    <string name="update_pwd">修改密码</string>
    <string name="update_login_pwd">修改登录密码</string>
    <string name="forget_pwd_title">忘记密码</string>
    <string name="about_ours">关于</string>
    <string name="exit">退出登录</string>
    <string name="hint_old_pwd">请输入原密码</string>
    <string name="set_new_pwd">请设置新的密码</string>
    <string name="hint_new_pwd">请输入新的密码</string>
    <string name="hint_opinion">请在此输入您的意见</string>
    <string name="hint_opinion_error">请输入您的意见</string>
    <string name="share">分享</string>
    <string name="mobile">电话</string>
    <string name="exit_confirm">确认退出登录吗</string>
    <string name="cancel_release">确认取消发布找资源</string>
    <string name="cancel_release_substance">确认取消发布找物资</string>
    <string name="cancel_release_buyer">确认取消发布找买家</string>
    <string name="pwd_no_same">两次输入的密码不一致</string>
    <string name="pwd_reset_success">密码重置成功</string>
    <string name="no_company">没有相关公司</string>
    <string name="no_post">没有相关职位</string>
    <string name="hint_company">请输入公司名称</string>
    <string name="edit_success">信息编辑成功</string>
    <string name="hint_production">请输入产品信息</string>
    <string name="recharge_dialog">充值</string>
    <string name="recharge">充  值</string>
    <string name="recharge_center">充值中心</string>
    <string name="recharge_record">充值记录</string>
    <string name="done">完成</string>
    <string name="recharge_success">充值成功</string>
    <string name="recharge_fail">充值失败</string>
    <string name="pwd_pay_set">设置支付密码</string>
    <string name="pwd_pay_update">修改支付密码</string>
    <string name="forget_pwd_pay">忘记密码</string>
    <string name="hint_pwd_pay_old">请输入原支付密码</string>
    <string name="hint_pwd_pay_new">请设置新的支付密码</string>
    <string name="pwd_pay_set_success">支付密码设置成功</string>
    <string name="pwd_pay_update_success">支付密码修改成功</string>
    <string name="hint_pwd_pay">请设置支付密码</string>
    <string name="pwd_pay_not_set">还没有设置支付密码</string>
    <string name="pwd_pay_done">支付密码已设置</string>
    <string name="add_friends">加好友</string>
    <string name="refuse_friends">拒绝添加</string>
    <string name="added">已添加</string>
    <string name="income_amount">收益金额</string>
    <string name="income_record">收益记录</string>
    <string name="buy_success">购买成功</string>
    <string name="headlines">基建头条</string>
    <string name="wechat_friend">微信好友</string>
    <string name="friend_circle">朋友圈</string>
    <string name="qq_friend">QQ好友</string>
    <string name="qq_stone">QQ空间</string>
    <string name="download_pictures">保存图片</string>
    <string name="share_picture">分享图片</string>
    <string name="release_demand">需求广场</string>
    <string name="scale">人员规模</string>
    <string name="hint_scale">请输入人员规模</string>
    <string name="service_area">服务地区</string>
    <string name="hint_address_detail">请输入公司地址</string>
    <string name="title">标题</string>
    <string name="commission">佣金</string>
    <string name="material_name">物资名称</string>
    <string name="material_number">物资数量</string>
    <string name="demand_num">需求数量</string>
    <string name="demand_project">需求项目</string>
    <string name="price_accept">接受价格</string>
    <string name="supply_num">供应数量</string>
    <string name="supply_style">供应方式</string>
    <string name="supply_address">供应地点</string>
    <string name="supply_price">供应价格</string>
    <string name="lease">租赁</string>
    <string name="sell">售卖</string>
    <string name="no_unit">请选择单位</string>
    <string name="hint_title">请输入标题</string>
    <string name="hint_commission">请输入佣金</string>
    <string name="select_time">请选择有效时间</string>
    <string name="hint_des">请输入具体描述</string>
    <string name="hint_material_name">请输入物资名称</string>
    <string name="hint_supply_num">请输入供应数量</string>
    <string name="hint_demand_num">请输入需求数量</string>
    <string name="hint_demand_project">请输入需求项目</string>
    <string name="hint_project_address">请输入项目地址</string>
    <string name="hint_price_accept">请输入接受价格</string>
    <string name="hint_price_supply">请输入供应价格</string>
    <string name="hint_supply_address">请输入供应地址</string>
    <string name="version_title">发现新版本</string>
    <string name="version_update">立即升级</string>
    <string name="version_cancel">下次再说</string>
    <string name="friends_new_notice">好友提醒</string>
    <string name="help_ask">问</string>
    <string name="help_answer">答</string>
    <string name="no_tel">暂无联系方式</string>
    <string name="no_enclosure">找不到当前图纸</string>
    <string name="replication_success">复制成功</string>
    <string name="no_mun">数量输入不能为空</string>
    <string name="contacts_info">联系方式</string>
    <string name="tel_code">手机号码</string>
    <string name="find_relationship">找资源</string>
    <string name="find_substance">找物资</string>
    <string name="find_buyer">找买家</string>
    <string name="hint_contact">请输入联系方式</string>
    <string name="year">年</string>
    <string name="receiving_name">收货人</string>
    <string name="receiving_name_hint">请填写收货人姓名</string>
    <string name="tel_code_hint">请填写收货人手机号</string>
    <string name="spot_area">所在地区</string>
    <string name="spot_area_hint">省市区县、乡镇等</string>
    <string name="spot_address">详细地址</string>
    <string name="spot_address_hint">街道、楼牌号等</string>
    <string name="default_address">设置默认地址</string>
    <string name="default_address_hint">提醒：每次下单会默认推荐使用该地址</string>
    <string name="optional">选填</string>
    <string name="product_name">产品名称</string>
    <string name="param">参数详情</string>
    <string name="hint_email">请输入电子邮箱</string>
    <string name="hint_product_name">设计的产品名称</string>
    <string name="hint_param">设计产品的详细参数</string>
    <string name="smart_design">智能设计</string>
</resources>