<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"   android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/circular_background_white_top">

    <TextView
        android:id="@+id/tv_find_relationship"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textColor="@color/colorTv"
        android:textSize="16sp"
        android:text="@string/find_relationship"/>


    <TextView
        android:id="@+id/tv_find_substance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textColor="@color/colorTv"
        android:textSize="16sp"
        android:text="@string/find_substance"/>


    <TextView
        android:id="@+id/tv_find_buyer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="95dp"
        android:gravity="center"
        android:textColor="@color/colorTv"
        android:textSize="16sp"
        android:text="@string/find_buyer"/>

</LinearLayout>