<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="26dp"
        android:textColor="@color/colorTv"
        android:textSize="16sp"
        android:text="@string/business_exp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:gravity="center_horizontal">

        <com.shuangduan.zcy.weight.datepicker.DatePickerView
            android:id="@+id/dp_exp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="159dp"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:text="@string/year"/>

    </RelativeLayout>
    
    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="80dp"
        android:layout_height="29dp"
        style="@style/BtnConfirm"
        android:textSize="14sp"
        android:text="@string/positive"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

</LinearLayout>